<resources>
    <string name="baseUrl">http://192.168.1.65:5000</string>
    <string name="baseUrlDishImage">http://192.168.1.65:5000/dishes/%1$s/image</string>
    <string name="baseUrlProductImage">http://192.168.1.65:5000/products/%1$s/image</string>

    <string name="logo">FitFoodie logotype</string>
    <string name="appName">FitFoodie</string>
    <string name="baseRegister">Зарегистрироваться</string>
    <string name="baseSign">Авторизация</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="actionSign">Авторизоваться</string>
    <string name="actionRegister">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="welcomeUser">Привет, %1$s</string>
    <string name="findDish">Подобрать блюдо</string>
    <string name="calculateProduct">Рассчитать продукты</string>
    <string name="products">Продукты</string>
    <string name="home">Домой</string>
    <string name="profile">Профиль</string>
    <string name="ad">Реклама</string>
    <string name="foodPreferences">Предпочтения категорий</string>
    <string name="preferencesType">Тип</string>
    <string name="preferencesEat">Люблю</string>
    <string name="preferencesNotLike">Редко</string>
    <string name="preferencesNotEat">Исключ.</string>
    <string name="preferencesMeat">Мясо</string>
    <string name="preferencesFish">Рыба</string>
    <string name="preferencesMilk">Молоко</string>
    <string name="prefsCategoryHelp">Люблю\n - содержащие продукты и блюда получают высокий приоритет.\nРедко\n - содержащие продукты и блюда получают низкий приоритет.\nИсключить\n - содержащие продукты и блюда не отображаются.
    </string>
    <string name="Details">Подробнее</string>
    <string name="search">Поиск</string>
    <string name="tabProducts">Ваши продукты</string>
    <string name="authRequired">Требуется авторизация.</string>
    <string name="leaveProfile">Выйти</string>
    <string name="retryLeave">Повторите действие.</string>
    <string name="profileName">Профиль: %1$s</string>
    <string name="search_products_hint">Название продукта</string>
    <string name="search_title">Фильтр по названию</string>
    <string name="btn_search">Найти</string>
    <string name="btn_cancel">Отмена</string>
    <string name="findDishAction">Подобрать</string>
    <string name="tabDishes">Подобранные блюда</string>
    <string name="search_dishes_hint">Название блюда</string>
    <string name="details_dishes_calories">Число калорий</string>
    <string name="details_dishes_minutes">Число минут</string>
    <string name="details_dishes_title">Фильтр по свойствам</string>
    <string name="dishProps">Характеристика</string>
    <string name="dishRecipe">Рецепт</string>
    <string name="dishChef">Совет от шефа</string>
    <string name="tabDishesAll">Все блюда</string>
    <string name="calcProductsAction">Рассчитать</string>
    <string name="tabProductsRequired">Необходимые продукты</string>
    <string name="productsCalcDishesNotSelected">Вы не выбрали блюда</string>
    <string name="exit_warning">Подтвердите действие</string>
    <string name="exit_accept">Выйти</string>
    <string name="unit_g">г.</string>
    <string name="unit_ml">мл.</string>
    <string name="unit_items">шт.</string>
    <string name="unit_tsp">чайн.л.</string>
    <string name="unit_tbsp">стол.л.</string>
    <string name="unit_cal">кал.</string>
    <string name="unit_min">минут</string>
    <string name="category_meat">мясное</string>
    <string name="category_fish">рыба</string>
    <string name="category_milk">молочное</string>
</resources>