<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/welcomeToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/welcomeUser"
        app:titleTextAppearance="@style/TextAppearance.Widget.FitFoodie.Toolbar.Title"
        app:titleTextColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/homeRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/welcomeToolbar">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFindRecipe"
            style="@style/Widget.FitFoodie.Button.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/findDish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalcProducts"
            style="@style/Widget.FitFoodie.Button.Action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/calculateProduct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFindRecipe" />

        <ImageView
            android:id="@+id/adBannerPrefs"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/ad"
            android:scaleType="centerCrop"
            android:src="@drawable/ad"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</LinearLayout>