<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/leave_menu"
        app:title="@string/profileName"
        app:titleTextAppearance="@style/TextAppearance.Widget.FitFoodie.Toolbar.Title"
        app:titleTextColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/prefsCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:id="@+id/prefsCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/foodPreferences"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/prefsCategoryHelp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Details"
                android:scaleType="centerInside"
                android:src="@drawable/ic_question"
                app:tint="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_meat"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/preferencesMeat"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/prefsCategoryMeatRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/prefsCategoryMeatRgLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesEat"/>

                    <RadioButton
                        android:id="@+id/prefsCategoryMeatRgRare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotLike" />

                    <RadioButton
                        android:id="@+id/prefsCategoryMeatRgExcl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotEat" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_fish"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/preferencesFish"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/prefsCategoryFishRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/prefsCategoryFishRgLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesEat" />

                    <RadioButton
                        android:id="@+id/prefsCategoryFishRgRare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotLike" />

                    <RadioButton
                        android:id="@+id/prefsCategoryFishRgExcl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotEat" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_milk"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/preferencesMilk"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_container_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/prefsCategoryMilkRg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/prefsCategoryMilkRgLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesEat" />

                    <RadioButton
                        android:id="@+id/prefsCategoryMilkRgRare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotLike" />

                    <RadioButton
                        android:id="@+id/prefsCategoryMilkRgExcl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/fitfoodie_green"
                        android:text="@string/preferencesNotEat" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/adBannerPrefs"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ad"
        android:scaleType="centerCrop"
        android:src="@drawable/ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prefsCategory" />
</LinearLayout>